--- a/.eslintrc
+++ b/.eslintrc
@@ -12,8 +12,11 @@
     "URLSearchParams": true
   },
   "rules": {
+    "no-trailing-spaces": [2, { "skipBlankLines": true }],
+    "object-curly-spacing": 1 ,
     "react/no-unused-prop-types": 1,
-    "react/require-default-props": 1,
+    "react/jsx-boolean-value": 0,
+    "react/require-default-props": 0,
     "react/jsx-no-bind": [1, {
       "ignoreRefs": true
     }]
