--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --progress --colors --hot --port 8080",
-    "dev-server": "babel-watch --presets=es2016 server.js",
+    "server": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -37,7 +37,7 @@
     "babel-eslint": "^7.2.2",
     "babel-loader": "^6.4.1",
     "babel-preset-es2016": "^6.24.1",
-    "babel-preset-node6": "^11.0.0",
+    "babel-preset-node7": "^1.5.0",
     "babel-preset-react": "^6.24.1",
     "babel-watch": "^2.0.6",
     "css-loader": "^0.28.0",
@@ -50,6 +50,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.2",
+    "nodemon": "^1.11.0",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "webpack": "^2.4.1",
