--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
+    "sequelize": "^3.30.4",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
